force-app/main/default/objects/System_Property__c/fields/Property_Key__c.field-meta.xml
<CustomField>
    <fullName>Property_Key__c</fullName>
    <externalId>true</externalId>
    <label>Property Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>