force-app/main/default/objects/System_Property__c/fields/Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Property_Value__c</fullName>
    <label>Property Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>